release: LyraFlow v1.1.5